test/compile_error/invalidrange.conf.4.def
config invalid_range_conf {
    foo : uint[-100~];
}
